--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
       </div>
       <div class="border-top">
-        <h6 class="text-center mt-3">Copyright ©2022 Priya S
+        <h6 class="text-center mt-3">Copyright ©2022 Venkatesh A
         </h6>
       </div>
     </footer>
