--- a/about.html
+++ b/about.html
@@ -49,10 +49,7 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="report.html">Report</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="QnA.html">Q&A</a>
-                        </li>
+                        </li>                       
                         <li class="nav-item active">
                           <a class="nav-link" href="about.html">About Us</a>
                         </li>
@@ -274,7 +271,7 @@
                 </div>
             </div>
             <div class="border-top">
-                <h6 class="text-center mt-3">Copyright ©2021 Priya S
+                <h6 class="text-center mt-3">Copyright ©2022 Venkatesh A
                 </h6>
             </div>
         </footer>
