--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="/images/8mln6j8svno41.jpg" class="img img-fluid rounded shadow-lg"
+                            <img src="/images/corona.webp" class="img img-fluid rounded shadow-lg"
                                 alt="about us image">
                         </div>
                     </div>
