--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-md-4 col-12">
           <div class="card bg-dark text-white">
             <a href="prevention.html">
-              <img class="card-img img img-fluid" src="/images/pexels-oleg-magni-4058870.jpg" alt="Card image">
+              <img class="card-img img img-fluid" src="/images/prevent.webp" alt="Card image">
             </a>
           </div>
         </div>
