--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
           <img class="d-block w-100" src="/images/1525016.jpg" alt="First slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/R (2).jfif" alt="Second slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i1.jfif" alt="Second slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/R (3).jfif" alt="Third slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i2.jfif" alt="Third slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/R (4).jfif" alt="Fourth slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i3.jfif" alt="Fourth slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/R (5).jfif" alt="Fifth slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i4.jfif" alt="Fifth slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/R.jfif" alt="Sixth slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i5.jfif" alt="Sixth slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/rh3.jfif" alt="Seventh slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i6.jfif alt="Seventh slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/pexels-anna-shvets-3962286.jpg" alt="Eighth slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i7.jfif" alt="Eighth slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/pexels-anna-shvets-3962213.jpg" alt="Ninth slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i8.jfif" alt="Ninth slide" width="1600px" height="670px">
         </div>
         
       </div>
