--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <img class="d-block w-100" src="/images/i5.jfif" alt="Sixth slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/i6.jfif alt="Seventh slide" width="1600px" height="670px">
+          <img class="d-block w-100" src="/images/i6.jfif" alt="Seventh slide" width="1600px" height="670px">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="/images/i7.jfif" alt="Eighth slide" width="1600px" height="670px">
